--- a/new.html
+++ b/new.html
@@ -27,7 +27,7 @@
           <span class="ullu">
             Forever Yours,
             <br />
-            Ullu</span
+            Baba Shekhar Tripathi</span
           >
         </p>
         <div class="address">
@@ -39,8 +39,5 @@
       </div>
     </div>
 
-    <footer>
-      <p>crafted by @untoldcoding.</p>
-    </footer>
   </body>
 </html>
